firs fix with js

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <input name="enterAmount" id="days" type="text">
             </div>
         </section>
-        <p><button>Рассчитать</button></p>
+        <p><button id="calculate">Рассчитать</button></p>
+        <span id="miss">Ошибка ввода параметров!</span>
         <script src="index.js"></script>
     </main>
 </body>
